Remove unused logo images: steunactie_logo.png and theweb3_ninja_logo.png

--- a/old.html
+++ b/old.html
@@ -22,48 +22,9 @@
   <meta name="asset-url" id="artdeco-icons/static/images/icons.svg" />
 
 
-  <link id="ui-theme" rel="stylesheet" href="/assets/ev3prx6qwul6j3me07vap4ui1.css" />
-  <link id="ui-theme-dark" rel="stylesheet" href="/assets/aukoz4odnf7kc6nk7ds8gowwm.css" disabled />
+  <!-- <link id="ui-theme" rel="stylesheet" href="assets/ev3prx6qwul6j3me07vap4ui1.css" />
+  <link id="ui-theme-dark" rel="stylesheet" href="assets/aukoz4odnf7kc6nk7ds8gowwm.css" disabled /> -->
 
-  <link rel="stylesheet" href="/assets/dxs0jrwsk9avhdu71ro0t9hha.css" />
-  <link rel="stylesheet" href="/assets/639xu62xk4vtgypa14go0xzpk.css" />
-  <link rel="stylesheet" href="/assets/8jccrbw1a2bbfl09opb3lcm4h.css" class="lazy-css" />
-  <link rel="stylesheet" href="/assets/4oh9r66yxuaqvezedncxmyowe.css" />
-  <link rel="stylesheet" href="/assets/qkkdbqmp78g03csbrfwfc0st..css" />
-  <link rel="stylesheet" href="/assets/4ka183qts3b2jugw44owh7eq0.css" />
-  <link rel="stylesheet" href="/assets/5d84rb06wvsdek0ik1t1mwz3r.css" />
-  <link rel="stylesheet" href="/assets/1sufbxo3bbo9nde70jwltz7dr.css" />
-  <link rel="stylesheet" href="/assets/8li7bh3x0vjl6eog3k6gdnec8.css" />
-  <link rel="stylesheet" href="/assets/4kqemjz6wnrwxht8otc1zstb5.css" />
-  <link rel="stylesheet" href="/assets/3o46pahpsvlgywm445w8gxsrb.css" />
-  <link rel="stylesheet" href="/assets/a95hw9cki494ahnkxnpem2fj0.css" />
-  <link rel="stylesheet" href="/assets/ah84a4kcg2akgyt6296nd7cp6.css" />
-  <link rel="stylesheet" href="/assets/d8y8vmm0jlwjzbpprfwptx8uw.css" />
-  <link rel="stylesheet" href="/assets/6hi041p36fi38pvpfb8xgxi6c.css" />
-  <link rel="stylesheet" href="/assets/cdz7v38snrwiv0ibpy6dnbsfh.css" />
-  <link rel="stylesheet" href="/assets/3s26cn7ud2fxurf9cgdss2k1z.css" />
-  <link rel="stylesheet" href="/assets/e00p0gdsszr55r7k37z5ciaf7.css" />
-  <link rel="stylesheet" href="/assets/dhsrq0tnl0i9eu0vgtawvd5bj.css" />
-  <link rel="stylesheet" href="/assets/2a6ozb7w2ugr7mdq39kzpjev7.css" />
-  <link rel="stylesheet" href="/assets/citq5cn0la76z6gwhw96lmljs.css" />
-  <link rel="stylesheet" href="/assets/5cgdr8c068nvib21zgnm3m3t3.css" />
-  <link rel="stylesheet" href="/assets/7idw62egefmtodfz3x8ty3qq9.css" />
-  <link rel="stylesheet" href="/assets/67vxuh8l6amax2mnefgjcbpaa.css" />
-  <link rel="stylesheet" href="/assets/3g663rj35fx41hd07xgebt17v.css" />
-  <link rel="stylesheet" href="/assets/2yg7sprpfi46qriu0i9ihzbyd.css" />
-  <link rel="stylesheet" href="/assets/dw0sfb5njg1jfcz6chlrg5s57.css" />
-  <link rel="stylesheet" href="/assets/8yiqiyfr8aa796z2sbo7y13lw.css" />
-  <link rel="stylesheet" href="/assets/cbj7eek48rwkjt8q4k9o8hfrx.css" />
-  <link rel="stylesheet" href="/assets/50qitgy7aukplfxvkfhqsl2p.css" />
-  <link rel="stylesheet" href="/assets/ccmdhko3yn26sila4wyqpm5te.css" />
-  <link rel="stylesheet" href="/assets/ddg7vb5z2r8w5lb9d804lcs5z.css" />
-  <link rel="stylesheet" href="/assets/7neaelp4b78rnjdlct3y4w3pw.css" />
-  <link rel="stylesheet" href="/assets/ajgod10yfio6uadrjtft9jhd7.css" />
-  <link rel="stylesheet" href="/assets/5aou7jzpvbw30hsg3hmm6w1kp.css" />
-  <link rel="stylesheet" href="/assets/8h0slomvbnxye3zrfhzoc8941.css" />
-  <link rel="stylesheet" href="/assets/90p6ve91r510jhlam0zypsrov.css" />
-  <link rel="stylesheet" href="/assets/44li6v4w9zly4et6trg041ss2.css" />
-  <link rel="stylesheet" href="/assets/he2mrc7l49d10kzm74bspie7.css" />
 
   <style type="text/css">
     .immersive-reader-button {
@@ -1071,7 +1032,7 @@
                 <button aria-expanded="false" id="ember21"
                   class="global-nav__primary-link global-nav__primary-link-me-menu-trigger artdeco-dropdown__trigger artdeco-dropdown__trigger--placement-bottom ember-view"
                   type="button" tabindex="0">
-                  <img width="24" src="/assets/1744692256752" height="24" alt="Rocco Russo" id="ember22"
+                  <img width="24" src="" height="24" alt="Rocco Russo" id="ember22"
                     class="global-nav__me-photo evi-image ember-view" />
 
                   <span class="t-12 global-nav__primary-link-text">
@@ -1122,7 +1083,7 @@
                   <div id="ember8319"
                     class="artdeco-entity-lockup artdeco-entity-lockup--size-1 ember-view NxYWpSOWfBscamBmYbHCZMRbYmxehYtELMgJnqKQ">
                     <div class="presence-entity presence-entity--size-1 m1">
-                      <img src="/assets/1744692256752" loading="lazy" alt="Rocco Russo" id="ember8320"
+                      <img src="" loading="lazy" alt="Rocco Russo" id="ember8320"
                         class="presence-entity__image EntityPhoto-circle-1 evi-image lazy-image ember-view" />
 
                       <div
@@ -1203,8 +1164,8 @@
                             class="profile-background-image">
                             <div class="profile-background-image__image-container">
                               <img class="profile-background-image__image relative full-width full-height"
-                                id="profile-background-image-target-image" alt="Background Image"
-                                src="/assets/1758487961243" style="left: 0px; top: 0px" fetchpriority="high" />
+                                id="profile-background-image-target-image" alt="Background Image" src=""
+                                style="left: 0px; top: 0px" fetchpriority="high" />
                             </div>
                           </div>
 
@@ -1229,8 +1190,8 @@
                             <div class="pv-top-card__photo-wrapper ml0">
                               <div class="profile-photo-edit pv-top-card__edit-photo">
                                 <button class="profile-photo-edit__edit-btn" type="button">
-                                  <img width="200" src="/assets/1744692256683" height="200" alt="Rocco Russo"
-                                    id="ember8341" class="evi-image ember-view profile-photo-edit__preview" />
+                                  <img width="200" src="" height="200" alt="Rocco Russo" id="ember8341"
+                                    class="evi-image ember-view profile-photo-edit__preview" />
                                   <div class="profile-photo-edit__edit-icon-container">
                                     <svg role="none" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16"
                                       height="16" viewBox="0 0 16 16" data-supported-dps="16x16"
@@ -1303,7 +1264,7 @@
                             <button class="fEHXjSOdTeuiJjDWIWZrBMWKChfPVCbmM text-align-left"
                               aria-label="Current company: Stealth AI Startup. Click to skip to experience card"
                               type="button">
-                              <img src="/assets/1693216489946" alt id="ember8348"
+                              <img src="" alt id="ember8348"
                                 class="evi-image ember-view xlnaComIUGylVXUxDzgWGDrMbsNHltwxuBhBU EntityPhoto-square-1" />
                               <span
                                 class="YdqpsYRsOFrRQXLASCbhuzCQfhbjlRjLwLAQ hoverable-link-text break-words text-body-small t-black">
@@ -1671,8 +1632,8 @@
                                   <div class="ivm-view-attr__img-wrapper">
                                     <!---->
                                     <!---->
-                                    <img width="48" src="/assets/1693216489946" loading="lazy" height="48"
-                                      alt="Stealth AI Startup logo" id="ember8439"
+                                    <img width="48" src="" loading="lazy" height="48" alt="Stealth AI Startup logo"
+                                      id="ember8439"
                                       class="ivm-view-attr__img--centered EntityPhoto-square-3 evi-image lazy-image ember-view" />
                                   </div>
                                 </div>
@@ -1830,7 +1791,7 @@
                                   <div class="ivm-view-attr__img-wrapper">
                                     <!---->
                                     <!---->
-                                    <img width="48" src="/images/theweb3_ninja_logo.png" loading="lazy" height="48"
+                                    <img width="48" src="/raw/images/png/theweb3_ninja_logo.png" height="48"
                                       alt="The Web3 Ninja logo" id="ember8446"
                                       class="ivm-view-attr__img--centered EntityPhoto-square-3 evi-image lazy-image ember-view" />
                                   </div>
@@ -2036,7 +1997,7 @@
                                   <div class="ivm-view-attr__img-wrapper">
                                     <!---->
                                     <!---->
-                                    <img width="48" src="/assets/1737546207407" loading="lazy" height="48"
+                                    <img width="48" src="assets/1737546207407" loading="lazy" height="48"
                                       alt="CyberGrandpa logo" id="ember8453"
                                       class="ivm-view-attr__img--centered EntityPhoto-square-3 evi-image lazy-image ember-view" />
                                   </div>
@@ -2251,7 +2212,7 @@
                                   <div class="ivm-view-attr__img-wrapper">
                                     <!---->
                                     <!---->
-                                    <img width="48" src="/assets/theweb3_ninja_logo.png" loading="lazy" height="48"
+                                    <img width="48" src="./assets/theweb3_ninja_logo.png" loading="lazy" height="48"
                                       alt="The Web3 Ninja logo" id="ember8462"
                                       class="ivm-view-attr__img--centered EntityPhoto-square-3 evi-image lazy-image ember-view" />
                                   </div>
@@ -2367,7 +2328,7 @@
                                   <div class="ivm-view-attr__img-wrapper">
                                     <!---->
                                     <!---->
-                                    <img width="48" src="/images/steunactie_logo.png" loading="lazy" height="48"
+                                    <img width="48" src="/raw/images/png/steunactie_logo.png" loading="lazy" height="48"
                                       alt="Steunactie logo" id="ember8467"
                                       class="ivm-view-attr__img--centered EntityPhoto-square-3 evi-image lazy-image ember-view" />
                                   </div>
@@ -2464,7 +2425,7 @@
                                                 aria-label="Thumbnail for Help Abdul Karim Heal: A War Child’s Fight for Life"
                                                 href="https://www.linkedin.com/in/roccorusso/overlay/volunteering-experiences/297705184/multiple-media-viewer?profileId=ACoAAAO8p0YB-aUT-jykCemSH8zQ7BJSKa4ipQk&amp;treasuryMediaId=1759086813164&amp;type=IMAGE">
                                                 <figure class="pvs-thumbnail">
-                                                  <img src="/assets/1759086763546" loading="lazy" alt
+                                                  <img src="assets/1759086763546" loading="lazy" alt
                                                     id="thumbnail-image-ember8471"
                                                     class="pvs-thumbnail__image evi-image lazy-image ember-view" />
                                                   <!---->
@@ -2478,7 +2439,7 @@
                                                 aria-label="Thumbnail for Save Elias &amp; His Family: From Tent to Safety"
                                                 href="https://www.linkedin.com/in/roccorusso/overlay/volunteering-experiences/297705184/multiple-media-viewer?profileId=ACoAAAO8p0YB-aUT-jykCemSH8zQ7BJSKa4ipQk&amp;treasuryMediaId=1759086813165&amp;type=IMAGE">
                                                 <figure class="pvs-thumbnail">
-                                                  <img src="/assets/1759086701497" loading="lazy" alt
+                                                  <img src="assets/1759086701497" loading="lazy" alt
                                                     id="thumbnail-image-ember8474"
                                                     class="pvs-thumbnail__image evi-image lazy-image ember-view" />
                                                   <!---->
@@ -2633,7 +2594,7 @@
                                               <div class="ivm-view-attr__img-wrapper">
                                                 <!---->
                                                 <!---->
-                                                <img width="24" src="/assets/1715941052756" loading="lazy" height="24"
+                                                <img width="24" src="assets/1715941052756" loading="lazy" height="24"
                                                   alt="Orhan Abbasov profile picture" id="ember8483"
                                                   class="ivm-view-attr__img--centered ivm-view-attr__img--stacked ivm-view-attr__img--stacked-circle-size-0 EntityPhoto-circle-0-stackedFacepile evi-image lazy-image ember-view" />
                                               </div>
@@ -2763,7 +2724,7 @@
                                               <div class="ivm-view-attr__img-wrapper">
                                                 <!---->
                                                 <!---->
-                                                <img width="24" src="/assets/theweb3_ninja_logo.png" loading="lazy"
+                                                <img width="24" src="./assets/theweb3_ninja_logo.png" loading="lazy"
                                                   height="24" alt="Company logo" id="ember8491"
                                                   class="ivm-view-attr__img--centered ivm-view-attr__img--stacked ivm-view-attr__img--stacked-square-size-0 EntityPhoto-square-0-stackedFacepile evi-image lazy-image ember-view" />
                                               </div>
@@ -2810,7 +2771,7 @@
                                               <div class="ivm-view-attr__img-wrapper">
                                                 <!---->
                                                 <!---->
-                                                <img width="24" src="/assets/1740294596411" loading="lazy" height="24"
+                                                <img width="24" src="assets/1740294596411" loading="lazy" height="24"
                                                   alt="Shakarim Bazhenov profile picture" id="ember8494"
                                                   class="ivm-view-attr__img--centered ivm-view-attr__img--stacked ivm-view-attr__img--stacked-circle-size-0 EntityPhoto-circle-0-stackedFacepile evi-image lazy-image ember-view" />
                                               </div>
@@ -2983,9 +2944,6 @@
                                       <div class="ivm-view-attr__img-wrapper">
                                         <!---->
                                         <!---->
-                                        <img width="48" src="/assets/1755881089035" loading="lazy" height="48"
-                                          alt="Yehuda Bortz" id="ember8511"
-                                          class="ivm-view-attr__img--centered EntityPhoto-circle-3 evi-image lazy-image ember-view" />
                                       </div>
                                     </div>
                                   </a>
@@ -3168,9 +3126,7 @@
                                       <div class="ivm-view-attr__img-wrapper">
                                         <!---->
                                         <!---->
-                                        <img width="48" src="/assets/1755881089035" loading="lazy" height="48"
-                                          alt="Yehuda Bortz" id="ember8511"
-                                          class="ivm-view-attr__img--centered EntityPhoto-circle-3 evi-image lazy-image ember-view" />
+
                                       </div>
                                     </div>
                                   </a>
@@ -3351,11 +3307,6 @@
                                     target="_self" href="https://www.linkedin.com/in/yehudabortz">
                                     <div class="ivm-image-view-model pvs-entity__image">
                                       <div class="ivm-view-attr__img-wrapper">
-                                        <!---->
-                                        <!---->
-                                        <img width="48" src="/assets/1755881089035" loading="lazy" height="48"
-                                          alt="Yehuda Bortz" id="ember8511"
-                                          class="ivm-view-attr__img--centered EntityPhoto-circle-3 evi-image lazy-image ember-view" />
                                       </div>
                                     </div>
                                   </a>
@@ -4459,7 +4410,7 @@
                                   <div class="ivm-view-attr__img-wrapper">
                                     <!---->
                                     <!---->
-                                    <img width="48" src="/assets/1711307864189" loading="lazy" height="48"
+                                    <img width="48" src="assets/1711307864189" loading="lazy" height="48"
                                       alt="Fran Solomita" id="ember8624"
                                       class="ivm-view-attr__img--centered EntityPhoto-circle-3 evi-image lazy-image ember-view" />
                                   </div>
