Refactor file structure and update asset links in HTML for consistency

--- a/old.html
+++ b/old.html
@@ -21,10 +21,8 @@
 
   <meta name="asset-url" id="artdeco-icons/static/images/icons.svg" />
 
-
-  <!-- <link id="ui-theme" rel="stylesheet" href="assets/ev3prx6qwul6j3me07vap4ui1.css" />
-  <link id="ui-theme-dark" rel="stylesheet" href="assets/aukoz4odnf7kc6nk7ds8gowwm.css" disabled /> -->
-
+  <link id="ui-theme" rel="stylesheet" href="raw/assets/css/ev3prx6qwul6j3me07vap4ui1.css" />
+  <link id="ui-theme-dark" rel="stylesheet" href="raw/assets/css/aukoz4odnf7kc6nk7ds8gowwm.css" disabled />
 
   <style type="text/css">
     .immersive-reader-button {
