--- a/public/old.html
+++ b/public/old.html
@@ -24,7 +24,7 @@
   <link rel="apple-touch-icon-precomposed" href="/assets/png/2if24wp7oqlodqdlgei1n1520.png" sizes="57x57" />
   <link rel="apple-touch-icon-precomposed" href="/assets/png/eahiplrwoq61f4uan012ia17i.png" sizes="144x144" />
 
-  <link rel="stylesheet" href="linkedin.css" />
+  <link rel="stylesheet" href="/linkedin.css" />
 
   <style id="linkedin-full-width-style">
     ;
