--- a/index.html
+++ b/index.html
@@ -4,12 +4,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags -->
+  <title>Rocco Russo | Software Engineer / Tech Lead</title>
+  <meta name="description"
+    content="Software engineer with over 20 years of experience in front-end engineering, Web3 integrations, and full-stack development. Expert in React, TypeScript, blockchain, and AI." />
+  <meta name="keywords"
+    content="software engineer, tech lead, blockchain, web3, react, typescript, full-stack developer, AI, dapps" />
+  <meta name="author" content="Rocco Russo" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Rocco" />
+  <meta name="apple-mobile-web-app-title" content="Rocco Russo" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
+  <!-- PWA Manifest -->
   <link rel="manifest" href="/manifest.json" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="profile" />
+  <meta property="og:url" content="https://linkedin-roccorusso.work/" />
+  <meta property="og:title" content="Rocco Russo | Software Engineer / Tech Lead" />
+  <meta property="og:description"
+    content="Software engineer with over 20 years of experience in front-end engineering, Web3 integrations, and full-stack development." />
+  <meta property="og:image" content="https://linkedin-roccorusso.work/assets/png/og-image.png" />
+  <meta property="og:site_name" content="Rocco Russo" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://linkedin-roccorusso.work/" />
+  <meta name="twitter:title" content="Rocco Russo | Software Engineer / Tech Lead" />
+  <meta name="twitter:description"
+    content="Software engineer with over 20 years of experience in front-end engineering, Web3 integrations, and full-stack development." />
+  <meta name="twitter:image" content="https://linkedin-roccorusso.work/assets/png/og-image.png" />
+  <meta name="twitter:creator" content="@xdemocle" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://linkedin-roccorusso.work/" />
 
   <!-- Theme script - MUST run before CSS loads to prevent FOIT -->
   <script>
