chore: update SEO meta descriptions and improve job titles in experience section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <!-- SEO Meta Tags -->
   <title>Rocco Russo | Software Engineer / Tech Lead</title>
   <meta name="description"
-    content="Software engineer with over 20 years of experience in front-end engineering, Web3 integrations, and full-stack development. Expert in React, TypeScript, blockchain, and AI." />
+    content="Experienced software engineer and tech lead with 20+ years in frontend development, Web3, and blockchain. Specialized in React, TypeScript, Next.js, DeFi applications, smart contracts, and AI integrations. Led teams building scalable applications serving 5M+ monthly users with expertise in modern web architecture and decentralized technologies." />
   <meta name="keywords"
-    content="software engineer, tech lead, blockchain, web3, react, typescript, full-stack developer, AI, dapps" />
+    content="software engineer, tech lead, blockchain, web3, react, typescript, full-stack developer, AI, dapps, DeFi, smart contracts, Next.js, frontend architecture" />
   <meta name="author" content="Rocco Russo" />
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
 
@@ -32,7 +32,7 @@
   <meta property="og:url" content="https://linkedin-roccorusso.work/" />
   <meta property="og:title" content="Rocco Russo | Software Engineer / Tech Lead" />
   <meta property="og:description"
-    content="Software engineer with over 20 years of experience in front-end engineering, Web3 integrations, and full-stack development." />
+    content="Experienced software engineer and tech lead with 20+ years in frontend development, Web3, and blockchain. Specialized in React, TypeScript, Next.js, DeFi applications, smart contracts, and AI integrations." />
   <meta property="og:image" content="https://linkedin-roccorusso.work/assets/png/og-image.png" />
   <meta property="og:site_name" content="Rocco Russo" />
   <meta property="og:locale" content="en_US" />
@@ -42,7 +42,7 @@
   <meta name="twitter:url" content="https://linkedin-roccorusso.work/" />
   <meta name="twitter:title" content="Rocco Russo | Software Engineer / Tech Lead" />
   <meta name="twitter:description"
-    content="Software engineer with over 20 years of experience in front-end engineering, Web3 integrations, and full-stack development." />
+    content="Experienced software engineer and tech lead with 20+ years in frontend development, Web3, and blockchain. Specialized in React, TypeScript, Next.js, DeFi applications, smart contracts, and AI integrations." />
   <meta name="twitter:image" content="https://linkedin-roccorusso.work/assets/png/og-image.png" />
   <meta name="twitter:creator" content="@xdemocle" />
 
